<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/valorServico"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/cost_service"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qualidadeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qualidade_servico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/valorServico" />

    <RadioGroup
        android:id="@+id/grupoBotoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/botaoAmazing"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qualidadeServico">

        <RadioButton
            android:id="@+id/botaoAmazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_amazing" />

        <RadioButton
            android:id="@+id/botaoGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_good" />

        <RadioButton
            android:id="@+id/botaoOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_ok" />
    </RadioGroup>

    <Switch
        android:id="@+id/switchArredondamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/switch_arredondamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grupoBotoes" />

    <Button
        android:id="@+id/botaoCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/botao_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchArredondamento" />

    <TextView
        android:id="@+id/exibirResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Tip Amount: $10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botaoCalcular" />


</androidx.constraintlayout.widget.ConstraintLayout>